# taleem-ai-service

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: health.py  internal.py
app/core/: config.py  firebase_admin.py  internal_auth.py  security.py
app/db/: migrator.py  pool.py
app/repositories/: ai_request_repository.py  audit_repository.py  job_repository.py  provider_attempt_repository.py  rag_repository.py
app/services/ingestion/: jsonl_chunks.py  normalization.py  token_count.py
app/services/jobs/: queue.py
app/workers/: main.py
app/workers/handlers/: jsonl_ingest.py
docs/: architecture.md  decisions_changed.md  progress.md  roadmap.md
migrations/: 0001_platform_core.sql  0002_rag_schema.sql  0003_security_grants.sql  0003b_jsonl_schema_adjustments.sql  0003c_jsonl_validation_audit.sql
scripts/: migrate.py  smoke_test.py
tests/: conftest.py  run_fastapi_server.py  test_cross_repo_jwt_integration.py  test_db_schema_rls.py  test_health.py  test_protected_endpoints.py  test_repositories.py
tests/core/: test_internal_auth.py
tests/ingestion/: test_jsonl_audit.py  test_jsonl_ingestion_job.py  test_jsonl_validation.py  test_token_count.py
tests/workers/: test_worker_runtime.py
