[project]
name = "taleem-ai-service"
version = "0.1.0"
description = "FastAPI backend for Taleem AI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "firebase-admin>=7.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "httpx>=0.27.0"
]

[tool.uv]
package = false
